[package]
name = "day12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
regex = "1.9.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"]}

[[bench]]
name = "simulator_step_benchmark"
harness = false
