[package]
name = "day12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
use_avx2 = ["dep:aligned-vec"]

[dependencies]
once_cell = "1.18.0"
regex = "1.9.3"
aligned-vec = { version = "0.5.0", optional = true }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"]}

[[bench]]
name = "simulator_step_benchmark"
harness = false
